--- a/week 5/index.html
+++ b/week 5/index.html
@@ -3,10 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alivio</title>
 </head>
 <body>
-    <h1> Document 45</h1>
+    <header><h2 style="color:#01996D;">Alivio</h2></header>
+    <nav>
+        <a href=""><h3>Why Alivio</h3></a>
+        <a href=""><h3>Solutions</h3></a>
+        <a href=""><h3>Community</h3></a>
+        <a href=""><h3>Pricing</h3></a>
+        <a href=""><h3>Sign in</h3></a>
+        <div><button>Start Trial</button></div>
+    </nav>
+    <main>
+        <div class="container"><object type="image/png" data="assets/radu-flor.png" style="width: 1920px; height: 1184px;"></object>
+        <section>
+            <h1 style="color: #01996D;">Be aware, Manage well.</h1>
+            <p>Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+            <div><button>Find Your Way</button></div>
+        </section>
+        </div>
+            <div class="container">
+                <div>
+                    How it works
+                    <h3 style="color:#01996D;">Understand & Release the stress in 3 steps</h3>
+                </div>
+                <div>Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.
+                </div>
+            <div class="block">
+                <h4>Personalize</h4>
+                <p>
+                Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!    
+                </p>
+            <div><object data="assets/Rectangle 30.png" type="image/png"></object></div>
+            
+            </div>
+            <div class="block">
+                <h4>Write & Understand</h4>
+                <p>
+                Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!
+                </p>
+            <div> <object data="assets/Rectangle 40.png" type="image/png"></object>
+            </div>
+        <div class="block">
+            <h4>Alivio!</h4>
+            <p>
+                Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!
+            </p>
+            <div> <object data="assets/Rectangle 50.png" type="image/png"></object>
+        </div>
+    </div>
+    </main>
+    <footer>
+        <address>Контакты</address>
+    </footer>
+    
 </body>
 </html>
