add one section

--- a/week 5/index.html
+++ b/week 5/index.html
@@ -24,34 +24,33 @@
             <div><button>Find Your Way</button></div>
         </section>
         </div>
-            <div class="container">
-                <div>
-                    How it works
-                    <h3 style="color:#01996D;">Understand & Release the stress in 3 steps</h3>
-                </div>
-                <div>Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.
-                </div>
+        <div class="container">
+            <div>
+                <p>How it works </p>
+                <h3 style="color:#01996D;">Understand & Release the stress in 3 steps</h3>
+            </div>
+            <div>Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.
+            </div>
             <div class="block">
                 <h4>Personalize</h4>
-                <p>
-                Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!    
-                </p>
-            <div><object data="assets/Rectangle 30.png" type="image/png"></object></div>
-            
+                <p>Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p> 
+            <div><object data="assets/Rectangle30.png" type="image/png"></object></div>
             </div>
             <div class="block">
                 <h4>Write & Understand</h4>
-                <p>
-                Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!
-                </p>
-            <div> <object data="assets/Rectangle 40.png" type="image/png"></object>
+                <p>Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+            <div> <object data="assets/Rectangle40.png" type="image/png"></object>
             </div>
-        <div class="block">
-            <h4>Alivio!</h4>
-            <p>
-                Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!
-            </p>
-            <div> <object data="assets/Rectangle 50.png" type="image/png"></object>
+            <div class="block">
+                <h4>Alivio!</h4>
+                <p>Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+            <div> <object data="assets/Rectangle50.png" type="image/png"></object></div>
+        </div>
+        <div class="container">
+            <h3 style="color: #FFFFFF">Let's hear about Kayla's success story</h3>
+            <p>See how well Alivio works in a real customer's life.</p>
+            <div><button>Let's get started</button></div>
+            <div><object data="assets/Rectangle9.png" type="image/png"></object></div>
         </div>
     </div>
     </main>
