add font, normalize.css

--- a/week 5/index.html
+++ b/week 5/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alivio</title>
+    <link rel="stylesheet" href="Assets/normalize.css">
+    <link rel="stylesheet" href="Assets/alivio.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><h2 style="color:#01996D;">Alivio</h2></header>
-    <nav>
-        <a href=""><h3>Why Alivio</h3></a>
-        <a href=""><h3>Solutions</h3></a>
-        <a href=""><h3>Community</h3></a>
-        <a href=""><h3>Pricing</h3></a>
-        <a href=""><h3>Sign in</h3></a>
-        <div><button>Start Trial</button></div>
-    </nav>
+    <header>
+        <div id="logo"><object data="assets/Logo.png" type="image.png"></object></div> 
+        <nav>
+            <a href=""><h3>Why Alivio</h3></a>
+            <a href=""><h3>Solutions</h3></a>
+            <a href=""><h3>Community</h3></a>
+            <a href=""><h3>Pricing</h3></a>
+            <a href=""><h3>Sign in</h3></a>
+            <div><button>Start Trial</button></div>
+        </nav>
+    </header>
     <main>
         <div class="container"><object type="image/png" data="assets/radu-flor.png" style="width: 1920px; height: 1184px;"></object>
         <section>
@@ -39,23 +44,37 @@
             <div class="block">
                 <h4>Write & Understand</h4>
                 <p>Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
-            <div> <object data="assets/Rectangle40.png" type="image/png"></object>
+            <div> <object data="assets/Rectangle40.png" type="image/png"></object></div>
             </div>
             <div class="block">
                 <h4>Alivio!</h4>
                 <p>Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
             <div> <object data="assets/Rectangle50.png" type="image/png"></object></div>
+            </div>
         </div>
-        <div class="container">
+        <div class="block" style="background-color: #245852;">
             <h3 style="color: #FFFFFF">Let's hear about Kayla's success story</h3>
             <p>See how well Alivio works in a real customer's life.</p>
             <div><button>Let's get started</button></div>
-            <div><object data="assets/Rectangle9.png" type="image/png"></object></div>
+            <div><object data="assets/Rectangle8.png" type="image/png"></object></div>
         </div>
-    </div>
+        <div class="block">
+            <div><object data="assets/court-cook-TSZo17r3m0s-unsplash-removebg 1.png" type="image/png"></object></div>
+            <p>Our product</p>
+            <h3 style="color: ;#245852">You tell us your stress, We make your diary</h3>
+            <p>Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+            <div><button>Find Your Way</button></div>
+
+
+        </div>
     </main>
-    <footer>
-        <address>Контакты</address>
+    <footer style="background-color: #245852;">
+        <nav>
+            <a href=""><h3>Why Alivio</h3></a>
+            <a href=""><h3>Solutions</h3></a>
+            <a href=""><h3>Community</h3></a>
+            <a href=""><h3>Pricing</h3></a>
+        </nav>
     </footer>
     
 </body>
