change folder tree

--- a/week 5/index.html
+++ b/week 5/index.html
@@ -5,77 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alivio</title>
-    <link rel="stylesheet" href="Assets/normalize.css">
-    <link rel="stylesheet" href="Assets/alivio.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Assets/slyles/normalize.css">
+    <link rel="stylesheet" href="Assets/slyles/alivio.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap">
 </head>
+
 <body>
-    <header>
-        <div id="logo"><object data="assets/Logo.png" type="image.png"></object></div> 
-        <nav>
-            <a href=""><h3>Why Alivio</h3></a>
-            <a href=""><h3>Solutions</h3></a>
-            <a href=""><h3>Community</h3></a>
-            <a href=""><h3>Pricing</h3></a>
-            <a href=""><h3>Sign in</h3></a>
-            <div><button>Start Trial</button></div>
-        </nav>
-    </header>
-    <main>
-        <div class="container"><object type="image/png" data="assets/radu-flor.png" style="width: 1920px; height: 1184px;"></object>
-        <section>
-            <h1 style="color: #01996D;">Be aware, Manage well.</h1>
-            <p>Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-            <div><button>Find Your Way</button></div>
-        </section>
-        </div>
-        <div class="container">
-            <div>
-                <p>How it works </p>
-                <h3 style="color:#01996D;">Understand & Release the stress in 3 steps</h3>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header_container">
+                <img class="header_logo" src="assets/images/Logo.png" alt="logo">
+                <nav class="header_menu menu">
+                    <ul class="menu_list">
+                        <li class="menu_item"><a href="#" class="menu_link">Why Alivio</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Solutions</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Community</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Pricing</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Sign in</a></li>
+                    </ul>
+                </nav>
+                <div class="header_button">
+                    <a href="#" class="button">Start Trial</a>
+                </div>
             </div>
-            <div>Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.
-            </div>
-            <div class="block">
-                <h4>Personalize</h4>
-                <p>Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p> 
-            <div><object data="assets/Rectangle30.png" type="image/png"></object></div>
-            </div>
-            <div class="block">
-                <h4>Write & Understand</h4>
-                <p>Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
-            <div> <object data="assets/Rectangle40.png" type="image/png"></object></div>
-            </div>
-            <div class="block">
-                <h4>Alivio!</h4>
-                <p>Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
-            <div> <object data="assets/Rectangle50.png" type="image/png"></object></div>
-            </div>
-        </div>
-        <div class="block" style="background-color: #245852;">
-            <h3 style="color: #FFFFFF">Let's hear about Kayla's success story</h3>
-            <p>See how well Alivio works in a real customer's life.</p>
-            <div><button>Let's get started</button></div>
-            <div><object data="assets/Rectangle8.png" type="image/png"></object></div>
-        </div>
-        <div class="block">
-            <div><object data="assets/court-cook-TSZo17r3m0s-unsplash-removebg 1.png" type="image/png"></object></div>
-            <p>Our product</p>
-            <h3 style="color: ;#245852">You tell us your stress, We make your diary</h3>
-            <p>Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-            <div><button>Find Your Way</button></div>
+        </header>
+        <main class="main">
 
+            <section class="hero">
+                <div class="hero_container">
+                    <div class="hero_content">
+                        <div class="hero_text">
+                            <h1 class="hero_title">Be aware, Manage well.</h1>
+                            <p class="hero_text">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                        </div>
+                        <div class="hero_button">
+                            <a href="#" class="button">Find Your Way</a>
+                        </div>
+                    </div>
+                    <div class="hero-image">
+                        <img src="assets/images/hero_alivio.png" alt="hero_alivio">
+                    </div>
+                </div>
+            </section>
 
-        </div>
-    </main>
-    <footer style="background-color: #245852;">
-        <nav>
-            <a href=""><h3>Why Alivio</h3></a>
-            <a href=""><h3>Solutions</h3></a>
-            <a href=""><h3>Community</h3></a>
-            <a href=""><h3>Pricing</h3></a>
-        </nav>
-    </footer>
+            <section class="offer">
+                <div class="offer_container">
+                    <div class="offer__block-text block-text">
+                        <p class="block-text__text">How it works</p>
+                        <h2 class="block-text__title block-text">Understand & Release the stress in 3 steps</h2>
+                        <p class="block-text__text">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
+                    </div>
+
+                    <div class="offer_items">
+                        <div class="offer_item  item-offer">
+                            <span class="number_step_offer">01</span>
+                            <h4 class="item-offer__title">Personalize</h4>
+                            <p class="item-offer_text">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                            <div class="item-offer_image">
+                                <img src="assets/images/img_step1.png" alt="img_step1">
+                            </div>
+                        </div>
+
+                        <div class="offer_item  item-offer">
+                            <span class="number_step_offer">02</span>
+                            <h4 class="item-offer__title">Write & Understand</h4>
+                            <p class="item-offer_text">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+                            <div class="item-offer_image">
+                                <img src="assets/images/img_step2.png" alt="img_step2">
+                            </div>
+                        </div>
+
+                        <div class="offer_item  item-offer">
+                            <span class="number_step_offer">03</span>
+                            <h4 class="item-offer__title">Alivio!</h4>
+                            <p class="item-offer_text">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+                            <div class="item-offer_image">
+                                <img src="assets/images/img_step3.png" alt="img_step3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="history">
+                <div class="history_container">
+                    <div class="history_block-text block-text">
+                        <h2 class="block-text-title block-text">Let's hear about Kayla's success story</h2>
+                        <p class="block-text_text">See how well Alivio works in a real customer's life.</p>
+                    </div>
+                    <div class="history_button">
+                        <a href="#" class="button">Let's get started</a>
+                    </div>
+                    <div class="history_image">
+                        <img src="assets/images/history_img.png" alt="history_img">
+                    </div>
+                </div>
+            </section>
+
+            <section class="product">
+                <div class="product_container">
+                    <div class="product_image">
+                        <img src="Assets/images/product_img.png" alt="product_img">
+                    </div>
+                    <div class="product_content">
+                        <p class="block-text_text">Our product</p>
+                        <h2 class="block-text__title block-text">You tell us your stress, We make your diary</h2>
+                        <p class="block-text_text">Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                        <div class="product_button">
+                            <a href="#" class="button">Find Your Way</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
     
+        </main>
+        <footer class="footer">
+            <div class="footer_container">
+                <nav class="footer_menu menu">
+                    <ul class="menu_list">
+                        <li class="menu_item"><a href="#" class="menu_link">Alivio</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Why Alivio</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Solutions</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Community</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">Pricing</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
