--- a/week 5/index.html
+++ b/week 5/index.html
@@ -8,22 +8,25 @@
     <link rel="stylesheet" href="Assets/slyles/normalize.css">
     <link rel="stylesheet" href="Assets/slyles/alivio.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Serif+Georgian:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header class="header">
             <div class="header_container">
-                <img class="header_logo" src="assets/images/Logo.png" alt="logo">
+                <img class="header_logo" src="assets/images/Logo.png" alt="logo" />
                 <nav class="header_menu menu">
                     <ul class="menu_list">
-                        <li class="menu_item"><a href="#" class="menu_link">Why Alivio</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Solutions</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Community</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Pricing</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Sign in</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Why Alivio</a>
+                        <li class="menu__item"><a href="#" class="menu__link">Solutions</a>
+                        <li class="menu__item"><a href="#" class="menu__link">Community</a>
+                        <li class="menu__item"><a href="#" class="menu__link">Pricing</a>
                     </ul>
                 </nav>
+                <div class="header_btn">
+                    <a href="#" class="btn">Sign in</a>
+                </div>
                 <div class="header_button">
                     <a href="#" class="button">Start Trial</a>
                 </div>
@@ -122,12 +125,12 @@
         <footer class="footer">
             <div class="footer_container">
                 <nav class="footer_menu menu">
-                    <ul class="menu_list">
-                        <li class="menu_item"><a href="#" class="menu_link">Alivio</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Why Alivio</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Solutions</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Community</a></li>
-                        <li class="menu_item"><a href="#" class="menu_link">Pricing</a></li>
+                    <ul class="footer_menu_list">
+                        <li class="footer_menu_item"><a href="#" class="menu_link">Alivio</a></li>
+                        <li class="footer_menu_item"><a href="#" class="menu_link">Why Alivio</a></li>
+                        <li class="footer_menu_item"><a href="#" class="menu_link">Solutions</a></li>
+                        <li class="footer_menu_item"><a href="#" class="menu_link">Community</a></li>
+                        <li class="footer_menu_item"><a href="#" class="menu_link">Pricing</a></li>
                     </ul>
                 </nav>
             </div>
