--- a/week 5/page-table2.html
+++ b/week 5/page-table2.html
@@ -12,34 +12,34 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header_container">[Шапка страницы]</div>
+            <div class="header__container">Шапка страницы</div>
         </header>
 
         <main class="main">
-            <div class="main_container">
-                <section class="main_content">
-                    <h2>[Основная часть]</h2>
-                    <div class="main_items">
-                        <div class="main_item">[Еще 1]</div>
-                        <div class="main_item">[Еще 2]</div>
-                        <div class="main_item third">[Еще 3]</div>
+            <div class="main__container">
+                <section class="main__content">
+                    <h2>Основная часть</h2>
+                    <div class="main__items">
+                        <div class="main__item">Еще 1</div>
+                        <div class="main__item">Еще 2</div>
+                        <div class="main__item third">Еще 3</div>
                     </div>
                 </section>
-                <aside class="aside">[Боковая область]</aside>
+                <aside class="aside">Боковая область</aside>
             </div>
         </main>
+
         <footer class="footer">
-            <div class="footer_container">
-                <div class="footer_items">
-                    <div class="foter_item one">[Секция футера 1]</div>
-                    <div class="foter_item">[Секция футера 2]</div>
-                    <div class="foter_item">[Секция футера 3]</div>
-                    <div class="foter_item">[Секция футера 4]</div>
+            <div class="footer__container">
+                <div class="footer__items">
+                    <div class="footer__item one">Секция футер 1</div>
+                    <div class="footer__item">Секция футер 2</div>
+                    <div class="footer__item">Секция футер 3</div>
+                    <div class="footer__item">Секция футер 4</div>
                 </div>
             </div>
         </footer>
     </div>
-
 </body>
 
 </html>
