--- a/week 5/index.html
+++ b/week 5/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Assets/slyles/normalize.css">
     <link rel="stylesheet" href="Assets/slyles/alivio.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Serif+Georgian:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Serif+Georgian:wght@700&display=swap">
 </head>
 
 <body>
@@ -24,7 +24,6 @@
                         <li class="menu__item"><a href="#" class="menu__link">Pricing</a>
                     </ul>
                 </nav>
-
                 <div class="header_btn">
                     <a href="#" class="btn">Sign in</a>
                 </div>
@@ -46,9 +45,9 @@
                             <a href="#" class="button">Find Your Way</a>
                         </div>
                     </div>
-                    <div class="hero-image">
+                    <!-- <div class="hero-image"> 
                         <img src="assets/images/hero_alivio.png" alt="hero_alivio">
-                    </div>
+                    </div>-->
                 </div>
             </section>
 
